--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Web Design & Management</title>
 </head>
 <body>
-	<h1><mark>Collen van Lent</mark></h1>
+	<h1><mark>Abraham Varnie</mark></h1>
 		<nav>
 			<a href="#">Home</a>
 			<a href="#">About</a>
